--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.10",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/next": "^8.0.7",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "tailwindcss": "^4.1.10",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
